# hpc15final

./: Makefile  README.org
Figs_Talk_etc/: ScalabilityRun.mat  Scalability_tests.ods  Scalability_tests.xls  Talk.odp  Talk.ppt  scaling_graphs.m
report/: Makefile  refs.bib  report.tex
src/: CMakeLists.txt  Untitled.ipynb  laplace.cpp  laplace.h  main.c  main.cpp  twodheat.c  twodheat.cpp  twodheat.h  util.hpp  visualization.ipynb
timetests/: Makefile  test_sep_time.cpp
timetests/Runs/: TerminalOutput_05_1024  TerminalOutput_05_128  TerminalOutput_05_2048  TerminalOutput_05_256  TerminalOutput_05_512  TerminalOutput_10_1024  TerminalOutput_10_256  TerminalOutput_10_512  TerminalOutput_10_64  TerminalOutput_20_128  TerminalOutput_20_256  TerminalOutput_20_32  TerminalOutput_20_4096  TerminalOutput_20_64  TerminalOutput_40_128  TerminalOutput_40_16  TerminalOutput_40_32  TerminalOutput_40_64  TerminalOutput_80_08  TerminalOutput_80_128  TerminalOutput_80_16  TerminalOutput_80_32  TerminalOutput_80_64
timetests/backups/: test_sep_time_1iter.cpp  test_sep_time_looped.cpp  test_sep_time_looped2.cpp
